--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "start": "node app.js",
+    "build": "node build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
