--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,6 @@
 {
   "scripts": {
-    "start": "node app.js",
-    "build": "node build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node app.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -11,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-fs": "^0.1.7",
     "openai": "^4.20.0"
   }
 }
