--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@minchat/react-chat-ui": "^0.10.3",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
